--- a/talks.html
+++ b/talks.html
@@ -14,17 +14,38 @@
   <!-- Projects Navigation Bar -->
   <nav class="custom-navbar">
     <a href="index.html">Back to Main Page</a>
+    <a href="#gov">Government Talks/Briefings</a>
     <a href="#keynote">Keynote, Invited Talks and Government Briefing</a>
     <a href="#invited-panel">Invited Panelist</a>
     <a href="#tutorial">Tutorial Presentations</a>
   </nav>
 
   <!-- Projects Sections -->
-
-  <section id="keynote">
-    <h2>Keynote, Invited Talks and Government Briefing</h2>
+ <section id="gov">
+    <h2>Government Talks/Briefings</h2>
     <div class="project">
       <ul>
+        <li><b>Invited for a briefing</b> in the <b>White House Office of Science and Technology Policy (OSTP)</b> on the state of <i>“Cyber Resiliency Technology and Research”</i>, December 2014.</li>
+        <li><b>Invited speaker</b> in the seminar of NSA/DHS <i>National Centers of Academic Excellence in Cyber Defense</i>, December 2015.</li>
+        <li><b>Invited speaker</b> by NSF, ARO, ONR, NIST, and NITRD</li>
+      </ul>
+    </div>
+    <!-- Add more projects -->
+  </section>
+
+
+  
+  <section id="keynote">
+    <h2>Keynote and Invited Talks</h2>
+    <div class="project">
+      <ul>
+        <li>“Toward Embedded Automated Malware Deception”, IEEE NOMS, 2023</li>
+        <li>“Malware Deception for Autonomous Cyber Defense  , IEEE HotNets, 2022</li>
+        <li>“Autonomous Cyber Deception”, ABLE Group, CMU, October 2021</li>
+        <li>“Automated Response using RL+SMT for IIOT Threat Mitigation”, CyLab Partner Conference,  2021</li>
+        <li>“Cyber Resilience—Metrics and Techniques”, Invited Talk in DevSecOps Conference, December 20211</li>
+        <li>“Cyber Risk and Mitigation of 5G networks”, ACSAC panel, December 2020.</li>
+        <li>“Text Analytics of Cybersecurity Intelligent Reports”, ABLE Group, CMU, October 2020</li>
         <li>“Analytics of Cyber Threat Intelligence”, FS-ISAC, Oct 2017.</li>
         <li>“Building a Cyber Risk Appetite Framework”, SINET CISO Workshop for major companies, Jan 2017</li>
         <li>“Cybersecurity Innovation”, SINET Invited talk in Silicon Valley, CA, November 2016.</li>
@@ -82,6 +103,7 @@
     <h2>Invited Panelist</h2>
     <div class="project">
     <ul>
+      <li>“Cybersecurity Research Challenges and Opportunities in 5G and Next Generation Cellular Networks”, ACSAC 2020</li>
       <li>“Active Cyber Defense for Resilient Infrastructure: Current Challenges and Future Directions” (with Arlette Hart, FBI, and Phil Quade, NSA), ACM CCS Workshop on Automated Decision Making for Active Cyber Defense, Oct 2015.</li>
       <li>SINET Panel on “The Role of Automation in Cybersecurity” (With  Philip Quade,  Chief of the NSA Cyber Task Force, National Security Agency, Hitesh Sheth, President and Chief Executive Officer of Vectra Networks,  and Thomas Bakewell, Chief Information Officer of Infoblox), November 2015.</li>
       <li>SINET panel on “Data-Driven Security Analytics & Automation for Advancing Cybersecurity Innovation” (with Rich Baich, Chief Information Security Officer of Wells Fargo Corp. Mark Clancy, Managing Director of DTCC, and  Douglas Maughan, Division Director of Cyber Security in DHS), July 2014.</li>
