--- a/talks.html
+++ b/talks.html
@@ -15,7 +15,7 @@
   <nav class="custom-navbar">
     <a href="index.html">Back to Main Page</a>
     <a href="#gov">Government Talks/Briefings</a>
-    <a href="#keynote">Keynote, Invited Talks and Government Briefing</a>
+    <a href="#keynote">Keynote & Invited Talks</a>
     <a href="#invited-panel">Invited Panelist</a>
     <a href="#tutorial">Tutorial Presentations</a>
   </nav>
