--- a/students.html
+++ b/students.html
@@ -26,13 +26,12 @@
     <h2>Past Doctoral Students Supervision/Co-Supervision</h2>
     <div class="project">
     <ol>
-      <li>Rakeb Mazhar Islam, “Automated Cyber Deception”, 2016- current.</li>
-      <li>Mohiuddin Ahmed, “Distributed Security Analytics”, 2016-current.</li>
-      <li>Ehsan Aghaei, "Automated Vulnerability Analytics and Mitigation: Classification, Prediction and Mitigation", 2017-current </li>
-      <li>Basel Abdeen, “Analytics of Cyber Threat Intelligence”, 2019- current.</li>
-      <li>Moumita Das Purba, “Analytics of Cyber Threat Intelligence”, 2019- current.</li>
-      <li>MD Sajid "Malware Analysis for Cyber Deception", 2017-current</li>
-      <li>Ashotush Dutta, “Autonomous Cyber Defense”, 2015-current (expected Feb 15, 2021).</li>
+      <li>Basel Abdeen, “CLASSIFICATION, SYNTHESIS, AND DECEPTION OF ATTACK TACTICS, TECHNIQUES, AND PROCEDURES USING LARGE LANGUAGE MODELS”,2025.</li>
+      <li>Mohiuddin Ahmed, “DISTRIBUTED HIERARCHICAL EVENT MONITORING FOR SECURITY ANALYTICS”, 2024.</li>
+      <li>MD Sajid "AUTONOMOUS MALWARE DECEPTION AND ORCHESTRATION", 2023.</li>
+      <li>Ehsan Aghaei, "AUTOMATED CLASSIFICATION AND MITIGATION OF CYBERSECURITY VULNERABILITIES", 2022.</li>
+      <li>Rakeb Mazhar Islam, “Active Cyber Defense Planning and Orchestration”, 2021.</li>
+      <li>Ashutosh Dutta, “Autonomous Cyber Defense: Formal Models and Applications”, 2021</li>
       <li>Ghaith Husari, “Analytics and Automation of Cyber Intelligence Information Sharing*”, 2014-2019.</li>
       <li>Mohamed Alsaleh, “Metrics, Verification and Synthesis of Cyber Resiliency Configuration”, 2011-April 2018.</li>
       <li>Haadi Jafarian*, “Cyber Agility for Deterrence and Deception”, (Assistant Professor at University of Colorado Denver), 2018.</li>
