--- a/services.html
+++ b/services.html
@@ -32,6 +32,7 @@
     <h2>Journal Editorial Board Member</h2>
     <div class="project">
       <ul>
+        <li>IEEE Transactions on Dependable and Secure Computing 2021-2025</li>
         <li>IEEE Transaction on Networks and Service Management (TNSM) 2012-current</li>
         <li>Journal of System and Network Management (JNSM), Associate Editor (2009-current)</li>
         <li>International Journal of Network Management (IJNM), 2007-current  </li>
