--- a/deep-learning-course.html
+++ b/deep-learning-course.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lectures</title>
+  <title>Deep Reinforcement Learning for Autonomous Self-Adaptive Systems</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
 
   <!-- Page Header -->
   <header>
-    <h1>Lecture Resources</h1>
+    <h1>Deep Reinforcement Learning for Autonomous Self-Adaptive Systems</h1>
   </header>
 
   <!-- Lectures Table -->
