--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,7 @@
  <section id="cmu">
    <h3>CMU Courses (2020-current)</h3>
    <p class="newline">
-17-765: Deep Reinforcement Learning for Autonomous Self-Adaptive Systems*
+<a href="deep-learning-course.html">17-765: Deep Reinforcement Learning for Autonomous Self-Adaptive Systems.</a>
 
 17-631: Information Security, Privacy & Policy (co-teach with Norman Sadeh)*.
 
