--- a/deep-learning-course.html
+++ b/deep-learning-course.html
@@ -3,21 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deep Reinforcement Learning for Autonomous Self-Adaptive Systems</title>
+  <title>Lectures</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Navigation Bar -->
-  <nav class="navbar">
+  <!-- IDENTICAL NAVIGATION BAR -->
+  <nav>
     <div class="nav-left">
-      <button onclick="window.location.href='index.html'" class="back-btn">← Back to Main Page</button>
+      <a href="index.html" class="logo">Your Logo</a>
+    </div>
+    <div class="nav-right">
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects & Tools</a>
+      <a href="lectures.html" class="active">Lectures</a>
+      <a href="publications.html">Publications</a>
+      <a href="contact.html">Contact</a>
     </div>
   </nav>
 
   <!-- Page Header -->
   <header>
-    <h1>Deep Reinforcement Learning for Autonomous Self-Adaptive Systems</h1>
+    <h1>Lecture Resources</h1>
   </header>
 
   <!-- Lectures Table -->
@@ -51,3 +58,4 @@
 
 </body>
 </html>
+
