--- a/deep-learning-course.html
+++ b/deep-learning-course.html
@@ -11,7 +11,8 @@
   <!-- IDENTICAL NAVIGATION BAR -->
   <nav>
     <div class="nav-left">
-      <a href="index.html" class="logo">Your Logo</a>
+      <a href="index.html">Back to Main Page</a>
+      <a href="teaching.html">Back to Courses</a>
     </div>
     <div class="nav-right">
       <a href="index.html">Home</a>
