--- a/deep-learning-course.html
+++ b/deep-learning-course.html
@@ -16,7 +16,8 @@
 
   <!-- Page Header -->
   <header>
-    <h1>Lecture Resources</h1>
+    <h2>Deep Reinforcement Learning for Autonomous Self-Adaptive Systems</h2>
+    <h3>Lecture Resources</h3>
   </header>
 
   <!-- Lectures Table -->
