--- a/deep-learning-course.html
+++ b/deep-learning-course.html
@@ -16,8 +16,8 @@
 
   <!-- Page Header -->
   <header>
-    <h2>Deep Reinforcement Learning for Autonomous Self-Adaptive Systems</h2>
-    <h3>Lecture Resources</h3>
+    <h2 style="text-align: center;">17-765: Deep Reinforcement Learning for Autonomous Self-Adaptive Systems</h2>
+    <h3 style="text-align: center;">Lecture Resources</h3>
   </header>
 
   <!-- Lectures Table -->
