--- a/teaching.html
+++ b/teaching.html
@@ -28,11 +28,11 @@
    <p class="newline">
 <a href="deep-learning-course.html">17-765: Deep Reinforcement Learning for Autonomous Self-Adaptive Systems.</a>
 
-17-631: Information Security, Privacy & Policy (co-teach with Norman Sadeh)*.
+<a href="information-security-course.html">17-631: Information Security, Privacy & Policy (co-teach with Norman Sadeh).</a>
 
-14-760: Advanced Networking*
+<a href="advanced-networking-course.html">14-760: Advanced Networking</a>
 
-14-990: Network Security Engineering- Analytics & Automation*.
+<a href="network-security-course.html">14-990: Network Security Engineering- Analytics & Automation.</a>
 
 14-850: INSuRE Cybersecurity Research.
    </p>
